--- a/latest/Dockerfile.amd64
+++ b/latest/Dockerfile.amd64
@@ -16,7 +16,7 @@ RUN apt-get update -y && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN npm install -g yarn npx
+RUN npm install -g yarn npx --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
