--- a/v12/Dockerfile.amd64
+++ b/v12/Dockerfile.amd64
@@ -1,4 +1,4 @@
-FROM owncloud/ubuntu:18.04
+FROM owncloud/ubuntu:20.04
 
 LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
   org.label-schema.name="ownCloud CI NodeJS" \
@@ -7,8 +7,8 @@ LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
 
 VOLUME ["/var/www/owncloud"]
 
-RUN curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
-  echo "deb https://deb.nodesource.com/node_12.x bionic main" | tee /etc/apt/sources.list.d/node.list
+RUN curl -sL https://deb.nodesource.com/setup_12.x -o nodesource_setup.sh && \
+  bash nodesource_setup.sh
 
 RUN apt-get update -y && \
   apt-get upgrade -y && \
