--- a/latest/Dockerfile.arm32v7
+++ b/latest/Dockerfile.arm32v7
@@ -1,4 +1,4 @@
-FROM owncloud/ubuntu:18.04-amd64
+FROM owncloud/ubuntu:18.04-arm32v7
 
 LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
   org.label-schema.name="ownCloud CI NodeJS" \
