--- a/v12/Dockerfile.amd64
+++ b/v12/Dockerfile.amd64
@@ -1,4 +1,4 @@
-FROM owncloud/ubuntu:20.04
+FROM owncloud/ubuntu:18.04-amd64
 
 LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
   org.label-schema.name="ownCloud CI NodeJS" \
@@ -7,8 +7,8 @@ LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
 
 VOLUME ["/var/www/owncloud"]
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x -o nodesource_setup.sh && \
-  bash nodesource_setup.sh
+RUN curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
+  echo "deb https://deb.nodesource.com/node_12.x bionic main" | tee /etc/apt/sources.list.d/node.list
 
 RUN apt-get update -y && \
   apt-get upgrade -y && \
@@ -16,10 +16,7 @@ RUN apt-get update -y && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
-  echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-  apt update && \
-  apt install yarn
+RUN npm install -g yarn npx --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
