--- a/v15/Dockerfile.arm64v8
+++ b/v15/Dockerfile.arm64v8
@@ -1,4 +1,4 @@
-FROM owncloud/ubuntu:18.04-amd64
+FROM owncloud/ubuntu:18.04-arm64v8
 
 LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
   org.label-schema.name="ownCloud CI NodeJS" \
