--- a/v15/Dockerfile.arm64v8
+++ b/v15/Dockerfile.arm64v8
@@ -1,9 +1,13 @@
 FROM owncloud/ubuntu:18.04-arm64v8
 
-LABEL maintainer="ownCloud DevOps <devops@owncloud.com>" \
-  org.label-schema.name="ownCloud CI NodeJS" \
-  org.label-schema.vendor="ownCloud GmbH" \
-  org.label-schema.schema-version="1.0"
+LABEL maintainer="ownCloud GmbH <devops@owncloud.com>" \
+  org.opencontainers.image.title="ownCloud CI NodeJS" \
+  org.opencontainers.image.vendor="ownCloud GmbH" \
+  org.opencontainers.image.authors="ownCloud GmbH" \
+  org.opencontainers.image.description="ownCloud CI NodeJS" \
+  org.opencontainers.image.documentation="https://github.com/owncloud-ci/nodejs.git" \
+  org.opencontainers.image.url="https://github.com/owncloud-ci/nodejs" \
+  org.opencontainers.image.source="https://github.com/owncloud-ci/nodejs"
 
 VOLUME ["/var/www/owncloud"]
 
