--- a/v10/Dockerfile.arm64v8
+++ b/v10/Dockerfile.arm64v8
@@ -9,10 +9,17 @@ LABEL maintainer="ownCloud GmbH <devops@owncloud.com>" \
   org.opencontainers.image.url="https://github.com/owncloud-ci/nodejs" \
   org.opencontainers.image.source="https://github.com/owncloud-ci/nodejs"
 
+ARG RETRY_VERSION
+
+# renovate: datasource=github-releases depName=owncloud-ci/retry
+ENV RETRY_VERSION="${RETRY_VERSION:-v2.0.0}"
+
 VOLUME ["/var/www/owncloud"]
 
 RUN apt-get update -y && \
   apt-get install -y git-core build-essential libpng16-16 lsb-release && \
+  curl -SsL -o /usr/local/bin/retry "https://github.com/owncloud-ci/retry/releases/download/v${RETRY_VERSION##v}/retry" && \
+  chmod 755 /usr/local/bin/retry && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
   echo "deb https://deb.nodesource.com/node_10.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
   apt-get update -y && \
