--- a/v10/Dockerfile.amd64
+++ b/v10/Dockerfile.amd64
@@ -24,6 +24,8 @@ RUN apt-get update -y && \
   echo "deb https://deb.nodesource.com/node_10.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
   apt-get update -y && \
   apt-get install -y nodejs && \
+  wget -q -P /tmp https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
+  apt install -y /tmp/google-chrome-stable_current_amd64.deb && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
