--- a/v16/Dockerfile.amd64
+++ b/v16/Dockerfile.amd64
@@ -29,7 +29,7 @@ RUN apt-get update -y && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN npm install --silent -g yarn npx --force
+RUN npm install --silent -g yarn npx pnpm --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
