--- a/v18/Dockerfile.arm64v8
+++ b/v18/Dockerfile.arm64v8
@@ -21,13 +21,13 @@ RUN apt-get update -y && \
   curl -SsfL -o /usr/local/bin/retry "https://github.com/owncloud-ci/retry/releases/download/v${RETRY_VERSION##v}/retry" && \
   chmod 755 /usr/local/bin/retry && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
-  echo "deb https://deb.nodesource.com/node_15.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
+  echo "deb https://deb.nodesource.com/node_18.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
   apt-get update -y && \
   apt-get install -y nodejs && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN npm install -g yarn npx --force
+RUN npm install --silent -g yarn npx pnpm --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
