--- a/v18/Dockerfile.arm32v7
+++ b/v18/Dockerfile.arm32v7
@@ -1,4 +1,4 @@
-FROM owncloud/ubuntu:20.04-amd64@sha256:a5ee273149acc9b959b545401e346f08acae85679be3510c74b1d34af260ea0b
+FROM owncloud/ubuntu:20.04-arm32v7@sha256:1d8bf9c20336dbde73d7d675426133774b0f8a00c44ae754eb7457dce1008229
 
 LABEL maintainer="ownCloud GmbH <devops@owncloud.com>" \
   org.opencontainers.image.title="ownCloud CI NodeJS" \
@@ -21,15 +21,13 @@ RUN apt-get update -y && \
   curl -SsfL -o /usr/local/bin/retry "https://github.com/owncloud-ci/retry/releases/download/v${RETRY_VERSION##v}/retry" && \
   chmod 755 /usr/local/bin/retry && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
-  echo "deb https://deb.nodesource.com/node_10.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
+  echo "deb https://deb.nodesource.com/node_18.x $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/node.list && \
   apt-get update -y && \
   apt-get install -y nodejs && \
-  wget -q -P /tmp https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-  apt install -y /tmp/google-chrome-stable_current_amd64.deb && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN npm install -g yarn npx --force
+RUN npm install --silent -g yarn npx pnpm --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
