--- a/v14/Dockerfile.amd64
+++ b/v14/Dockerfile.amd64
@@ -13,6 +13,8 @@ ARG RETRY_VERSION
 
 # renovate: datasource=github-releases depName=owncloud-ci/retry
 ENV RETRY_VERSION="${RETRY_VERSION:-v2.0.0}"
+# renovate: datasource=npm depName=pnpm
+ENV PNPM_VERSION="${PNPM_VERSION:-7.30.4}"
 
 VOLUME ["/var/www/owncloud"]
 
@@ -29,7 +31,7 @@ RUN apt-get update -y && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN npm install --silent -g yarn npx pnpm --force
+RUN npm install --silent -g yarn npx "pnpm@$PNPM_VERSION" --force
 
 COPY rootfs /
 WORKDIR /var/www/owncloud
