--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,4 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>owncloud-ci/renovate-presets:docker"]
+  "extends": ["github>owncloud-ci/renovate-presets:docker"],
+  "packageRules": [
+    {
+      "description": "Automerge pnpm non-major releases",
+      "matchPackagePatterns": ["^pnpm$"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
+    }
+  ]
 }
