--- a/v22/Dockerfile.arm64v8
+++ b/v22/Dockerfile.arm64v8
@@ -19,7 +19,7 @@ ENV PNPM_VERSION="${PNPM_VERSION:-10.11.0}"
 VOLUME ["/var/www/owncloud"]
 
 RUN apt-get update -y && \
-  apt-get install -y gettext git-core build-essential libfontconfig libpng16-16 lsb-release firefox && \
+  apt-get install -y gettext file git-core build-essential libfontconfig libpng16-16 lsb-release firefox && \
   curl -SsfL -o /usr/local/bin/retry "https://github.com/owncloud-ci/retry/releases/download/v${RETRY_VERSION##v}/retry" && \
   chmod 755 /usr/local/bin/retry && \
   curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
